# BetBoard

./: .gitignore  README.md  config.sample.toml  pyproject.toml
.github/workflows/: release.yml
betboard/: cli.py  config.py  models.py
betboard/core/: data.py  movement.py  normalization.py  serialization.py
betboard/providers/: base.py  espn_rss.py  oddsapi.py  therundown.py
betboard/storage/: cache.py  db.py
betboard/ui/: app.py  app.tcss  formatting.py
macos/: STATUS_BAR_UX.md
macos/BetBoardBar/: Package.swift  README.md
macos/BetBoardBar/Resources/: BetBoard.icns
macos/BetBoardBar/Sources/BetBoardBar/: BetBoardBarApp.swift  BundleBuilder.swift  DataStore.swift  Formatting.swift  JSONValue.swift  KeychainHelper.swift  MenuContentView.swift  Models.swift  OddsApiClient.swift  OddsApiModels.swift  RssClient.swift  SettingsView.swift  SettingsWindow.swift  SnapshotStore.swift  WatchlistStore.swift
macos/BetBoardBar/scripts/: package_app.sh
tests/: test_cache.py  test_movement.py  test_serialization.py
