[project]
name = "betboard"
version = "0.1.0"
description = "Sports odds + news terminal MVP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BetBoard" }]

dependencies = [
  "requests>=2.31.0",
  "feedparser>=6.0.11",
  "textual>=0.58.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
betboard = "betboard.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
